--- a/Dental/index.html
+++ b/Dental/index.html
@@ -616,7 +616,7 @@
       		infinite: true,
       		dots: true,
       		arrows: false,
-      		autoplay: false,
+      		autoplay: true,
     		autoplaySpeed: 3000,
     		fade: true
     	});
